--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:fitsSystemWindows="true"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_gravity="bottom"
+    android:fitsSystemWindows="true"
     tools:context="com.example.hoanglg.hooheyhow.MainActivity">
 
     <android.support.v7.widget.Toolbar
@@ -26,12 +26,86 @@
             android:text="@string/title_name"
             android:textColor="@android:color/white"
             />
-
     </android.support.v7.widget.Toolbar>
 
+
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_item"
+        android:id="@+id/rvItem"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/toolbar"/>
+
+
+    <LinearLayout
+        android:id="@+id/control_page"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|center"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:layout_weight="50"
+            android:gravity="bottom|center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_marginBottom="@dimen/text_margin"
+                android:layout_marginLeft="@dimen/text_margin_30"
+                android:text="@string/text_budget"
+                android:textSize="@dimen/text_bold_size"
+                android:textStyle="bold"
+                />
+
+            <me.grantland.widget.AutofitTextView
+                android:id="@+id/textview_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
+                android:maxLines="1"
+                android:text="@string/default_amount"
+                android:textColor="@android:color/holo_red_light"
+                android:textSize="@dimen/text_bold_size_amount"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/bet_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:layout_marginBottom="@dimen/text_margin"
+            android:layout_weight="25"
+            android:text="@string/button_bet"
+            android:textColor="@android:color/holo_green_dark"
+            android:textSize="@dimen/text_bold_size"
+            android:textStyle="bold"/>
+
+        <Button
+            android:id="@+id/reset_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:layout_marginBottom="@dimen/text_margin"
+            android:layout_marginRight="@dimen/text_margin"
+            android:layout_weight="25"
+            android:text="@string/button_reset"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="@dimen/text_bold_size"
+            android:textStyle="bold"
+            />
+    </LinearLayout>
+
+
+</RelativeLayout>
