--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,15 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <!--main screen-->
+    <dimen name="text_margin">10dp</dimen>
+    <dimen name="text_margin_10">10dp</dimen>
+    <dimen name="text_margin_20">20dp</dimen>
+    <dimen name="text_margin_30">30dp</dimen>
+
+    <dimen name="text_15">15sp</dimen>
+    <dimen name="text_bold_size">20sp</dimen>
+    <dimen name="text_bold_size_amount">30sp</dimen>
+    <dimen name="margin_padding_5">5dp</dimen>
+
 </resources>
