--- a/app/src/main/res/layout/activity_bet.xml
+++ b/app/src/main/res/layout/activity_bet.xml
@@ -29,11 +29,13 @@
 
     <Button
         android:id="@+id/shakeButton"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="49dp"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
         android:fontFamily="casual"
         android:text="Shake"
         android:textSize="24sp"
